<resources>

    <string name="app_name">星矢CS图鉴</string>
    <string name="header_img"></string>
    <string name="header_nid">No.</string>
    <string name="header_name">Name</string>
    <string name="header_attr">属</string>
    <string name="header_level">星</string>
    <string name="header_cost">C.</string>
    <string name="header_hp">HP</string>
    <string name="header_attack">A.</string>
    <string name="header_defense">D.</string>
    <string name="header_exist">Owned</string>
    <string name="save">保存</string>
    <string name="add">+</string>
    <string name="search">检索</string>
    <string name="delete">删除</string>
    <string name="dialog_set">设置</string>
    <string name="menu_out">导出数据</string>
    <string name="menu_out_header_img">显示头像</string>
    <string name="menu_out_despair">绝望</string>
    <string name="create">生成</string>
    <string name="cover">覆盖</string>
    <string name="set1">整体图1</string>
    <string name="set2">整体图2</string>
    <string name="set3">数值图</string>
    <string name="float_home">主屏幕</string>
    <string name="up">up</string>
    <string name="hg">HG</string>
    <string name="supplement">补</string>
    <string name="modify">更正</string>
    <string name="arrow">▼</string>
    <string name="despairWar">绝望鬥</string>

</resources>